--- a/Main.html
+++ b/Main.html
@@ -23,7 +23,7 @@
         <section class="home">
             <div class="home-content">
                 <h3>Hello, It's Me</h3>
-                <h1>Vamika Sharma</h1>
+                <h1>Vanshika</h1>
                 <h3>And I'm a <span class="text"></span></h3>
                 <p>whose goal is not just to excel academically 
                     but to apply her skills to real-world situations and contribute meaningfully. <br> Beyond my academic pursuits, I am a firm believer in the power of holistic growth.</p>
@@ -199,7 +199,7 @@
             </div>
         </section>
         <div class="last-text">
-            <p>@2024 Vamika Sharma, All Rights Reserved</p>
+            <p>@2024 Vanshika, All Rights Reserved</p>
         </div>
         <a href="#" class="top"><i class='bx bx-up-arrow-alt'></i></a>
         <script src="Main.js"></script>
